Finalizada clasificación. Closes #5

--- a/Clasificacion/casospracticos-jupyter/breastcancer.ipynb
+++ b/Clasificacion/casospracticos-jupyter/breastcancer.ipynb
@@ -1955,7 +1955,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "knnModelk1 <- train(x = wbcd[shuffle_ds[1:eightypct],-1], y = wbcd[shuffle_ds[1:eightypct],1], method = \"knn\", preProc = c(\"center\", \"scale\"), trControl=control, tuneGrid = data.frame(.k=1))\n",
@@ -1987,7 +1989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora haciendo uso de results podemos ver la distribucion de los valores en accuracy y kappa para cada uno de los valores de K ejecutados. "
+    "Ahora haciendo uso de results podemos ver la distribución de los valores en accuracy y kappa para cada uno de los valores de K ejecutados. "
    ]
   },
   {
@@ -2095,7 +2097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este caso todos han llegado a un total de aciertos, lo que deja ver que quizá al aumentar el número de repeticiones hemos sobre entrenado el modelo. Igualmente, ls gráficos son claros, por ejemplo podemos ver outliers sobre todo en los valores de K pares, lo que indica que estos son mas propensos a dar valores más bajos de accuracy en alguna de las pruebas realizadas. Respecto a esto, tambien podemos ver como los valores minimos en accuracy son obtenidos por valores de K pares, obteniendo en la mayoria de los casos valores mucho mejores tanto de Accuracy como de Kappa en los K impares."
+    "En este caso todos han llegado a un total de aciertos, lo que deja ver que quizá al aumentar el número de repeticiones hemos sobre entrenado el modelo. Igualmente, ls gráficos son claros, por ejemplo podemos ver outliers sobre todo en los valores de K pares, lo que indica que estos son más propensos a dar valores más bajos de accuracy en alguna de las pruebas realizadas. Respecto a esto, tambien podemos ver como los valores mínimos en accuracy son obtenidos por valores de K pares, obteniendo en la mayoria de los casos valores mucho mejores tanto de Accuracy como de Kappa en los K impares."
    ]
   },
   {
